Clase05/despliegue/kubernetes-local/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2-pod
          image: localhost:5000/mibackend2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
