Clase05/despliegue/kubernetes-local/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-pod
          image: localhost:5000/mifrontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
