Clase05/despliegue/kubernetes-local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/config
            backend:
              serviceName: frontend-svc
              servicePort: 80
          - path: /api
            backend:
              serviceName: backend1-svc
              servicePort: 80
          - path: /
            backend:
              serviceName: frontend-svc
              servicePort: 80
